# vlc-libde265

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  prepare-package.sh
debian/: changelog  control  postinst  postrm  rules
include/: libde265_plugin_common.h  vlc_codecs.h
patches/: vlc-2.1-37431af7ef-demux-mkv.diff  vlc-2.1-37431af7ef-demux-mp4.diff  vlc-2.1-37431af7ef-demux-ts.diff
src/codec/: libde265dec.c
src/demux/: libde265demux.c  ts.c  vobsub.h
src/demux/mkv/: Ebml_parser.cpp  Ebml_parser.hpp  chapter_command.cpp  chapter_command.hpp  chapters.cpp  chapters.hpp  demux.cpp  demux.hpp  matroska_segment.cpp  matroska_segment.hpp  matroska_segment_parse.cpp  mkv.cpp  mkv.hpp  stream_io_callback.cpp  stream_io_callback.hpp  util.cpp  util.hpp  virtual_segment.cpp  virtual_segment.hpp
src/demux/mp4/: id3genres.h  libmp4.h  mp4.c
src/mux/mpeg/: csa.h
